--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
       #character {
         width: 150px;
         height: 150px;
+        /* Verwende 70vh als Basis */
         top: 70vh;
         left: 50%;
         transform: translateX(-50%);
@@ -280,7 +281,7 @@
     </video>
   </div>
 
-  <!-- Neues Video-Element für die Spielanleitung -->
+  <!-- Neues Video-Element für die Spielanleitung (MP4, muted, playsinline, webkit-playsinline) -->
   <video id="instruction-video" muted playsinline webkit-playsinline>
     <source src="spielanleitung.mp4" type="video/mp4">
     Your browser does not support the video tag.
@@ -403,23 +404,24 @@
       if (!gameRunning || jumpCount >= 2) return;
       const character = document.getElementById("character");
       if (window.matchMedia("(pointer: coarse)").matches) {
-        // Mobile Endgeräte: noch höhere Sprünge
+        // Mobile: Nutze einen dynamischen Basiswert (70vh)
+        const base = window.innerHeight * 0.7;
         if (jumpCount === 0) {
-          character.style.top = '300px'; // Erster Sprung: noch höher
+          character.style.top = (base - 50) + "px"; // erster Sprung: 50px höher
         } else if (jumpCount === 1) {
-          character.style.top = '150px'; // Zweiter Sprung: noch höher
+          character.style.top = (base - 100) + "px"; // zweiter Sprung: 100px höher
         }
         jumpCount++;
         setTimeout(() => {
-          character.style.top = '650px';
+          character.style.top = base + "px";
           jumpCount = 0;
         }, 1000);
       } else {
-        // Desktop
+        // Desktop: Feste Werte
         if (jumpCount === 0) {
-          character.style.top = '400px'; // Erster Sprung
+          character.style.top = '400px'; // erster Sprung
         } else if (jumpCount === 1) {
-          character.style.top = '250px'; // Zweiter (höherer) Sprung
+          character.style.top = '250px'; // zweiter Sprung
         }
         jumpCount++;
         setTimeout(() => {
@@ -457,11 +459,7 @@
       if (window.matchMedia("(pointer: coarse)").matches) {
         alert("Auf mobilen Geräten kann das Fenster nicht automatisch geschlossen werden. Bitte schließen Sie das Browserfenster manuell.");
       } else {
-        // Versuche, das Fenster zu schließen – falls nicht möglich, Alert
-        window.open('', '_self', '');
-        window.close();
-        // Fallback: Falls window.close() nicht funktioniert:
-        alert("Das Fenster konnte nicht automatisch geschlossen werden. Bitte schließen Sie es manuell.");
+        window.location.href = "about:blank";
       }
     }
 
