--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jurassic Jumper</title>
-  <link rel="icon" type="image/x-icon" href="dinosaurier.png">
+  <link rel="icon" type="image/png" href="dinosaurier.png">
   
   <style>
     #website {
@@ -370,8 +370,8 @@
     
     if (window.matchMedia("(pointer: coarse)").matches) {
       const base = window.innerHeight * 0.67;
-      const lower = base - 70;
-      const upper = base + 10;
+      const lower = base - 100;
+      const upper = base + 20;
       const heartTop = lower + Math.random() * (upper - lower);
       heart.style.top = heartTop + "px";
       heart.style.width = "40px";
