--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jurassic Jumper</title>
-  <link rel="icon" type="image/png" href="dinosaurier.png">
+  <link rel="icon" type="image/png" href="/dinosaurier.png">
   
   <style>
     #website {
@@ -369,7 +369,7 @@
     heart.style.left = window.innerWidth + 'px';
     
     if (window.matchMedia("(pointer: coarse)").matches) {
-      const base = window.innerHeight * 0.67;
+      const base = window.innerHeight * 0.7;
       const lower = base - 120;
       const upper = base + 30;
       const heartTop = lower + Math.random() * (upper - lower);
@@ -417,7 +417,7 @@
       if (!gameRunning || jumpCount >= 2) return;
       const character = document.getElementById("character");
       if (window.matchMedia("(pointer: coarse)").matches) {
-        const base = window.innerHeight * 0.67;
+        const base = window.innerHeight * 0.7;
         if (jumpCount === 0) {
           character.style.top = (base - 150) + "px"; // Erster Sprung: 150px
         } else if (jumpCount === 1) {
