--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jurassic Jumper</title>
-  <link rel="icon" type="image/png" href="dino-favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <style>
     #website {
