--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jurassic Jumper</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="https://alina-on-code.github.io/jurassic-jumper/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://alina-on-code.github.io/jurassic-jumper/favicon.ico" type="image/png">
+  <link rel="apple-touch-icon" href="https://alina-on-code.github.io/jurassic-jumper/favicon.ico">
   
   <style>
     #website {
